<resources>
    <string name="app_name">Rutgers Cafe</string>
    <string name="donutMenu">Order Donut</string>
    <string name="coffeeMenu">Order Coffee</string>
    <string name="donut">Donuts</string>
    <string name="coffee">Coffee</string>
    <string name="order">Review Order</string>
    <string name="storeOrder">All Orders</string>
    <string name="welcome">Welcome to the Rutgers Cafe(tm) mobile app!</string>
    <string name="orderHeader">Review your order</string>
    <string name="removeItem">Remove Item</string>
    <string name="placeOrder">Place order</string>
    <string name="returnMain">Return to Main Menu</string>
    <string name="storeOrderHeader">Current Orders</string>
    <string name="removeOrder">Remove Order</string>
    <string name="RLogo">The Rutgers Logo</string>
    <string name="addOrder">Add to Order</string>
    <string name="yeast">Yeast Donut</string>
    <string name="cake">Cake Donut</string>
    <string name="donutHole">Donut Hole</string>
    <string name="tallSize">Tall</string>
    <string name="shortSize">Short</string>
    <string name="grandeSize">Grande</string>
    <string name="ventiSize">Venti</string>
    <string name="milk">Milk</string>
    <string name="cream">Cream</string>
    <string name="sugar">Sugar</string>
    <string name="caramel">Caramel</string>
    <string name="syrup">Syrup</string>
    <string name="whippedcreme">Whipped Creme</string>
    <string name="price">Price: $</string>

</resources>