<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.037"
            android:id="@+id/welcomeLabel" app:layout_constraintHorizontal_bias="0.495"/>
    <Button
            android:text="@string/donut"
            android:layout_width="183dp"
            android:layout_height="195dp" android:id="@+id/donutBTN" tools:layout_editor_absoluteY="339dp"
            tools:layout_editor_absoluteX="16dp"/>
    <Button
            android:text="@string/storeOrder"
            android:layout_width="371dp"
            android:layout_height="65dp" android:id="@+id/storeOrderBTN" tools:layout_editor_absoluteY="656dp"
            tools:layout_editor_absoluteX="20dp"/>
    <Button
            android:text="@string/order"
            android:layout_width="372dp"
            android:layout_height="97dp" android:id="@+id/orderBTN" tools:layout_editor_absoluteY="545dp"
            tools:layout_editor_absoluteX="18dp"/>
    <Button
            android:text="@string/coffee"
            android:layout_width="183dp"
            android:layout_height="195dp" android:id="@+id/coffeeBTN" tools:layout_editor_absoluteY="339dp"
            tools:layout_editor_absoluteX="207dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:id="@+id/imageView2" tools:layout_editor_absoluteY="-148dp" tools:layout_editor_absoluteX="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>