<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DonutActivity">

    <ImageView
            android:layout_width="341dp"
            android:layout_height="133dp"
            app:srcCompat="@drawable/tempdonut" android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.028"
            android:contentDescription="@string/donut" android:visibility="visible"
            tools:srcCompat="@drawable/tempdonut" android:background="@drawable/tempdonut"/>
    <RadioGroup
            android:layout_width="132dp"
            android:layout_height="105dp"
            android:id="@+id/donutTypeRB" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/donutLW"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">
        <RadioButton
                android:text="@string/yeast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton"/>
        <RadioButton
                android:text="@string/cake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton2"/>
        <RadioButton
                android:text="@string/donutHole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton3"/>
    </RadioGroup>
    <ListView
            android:layout_width="246dp"
            android:layout_height="340dp"
            android:id="@+id/donutLW" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
            android:layout_width="145dp"
            android:layout_height="29dp" android:id="@+id/spinner2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/donutTypeRB"/>
    <Spinner
            android:layout_width="147dp"
            android:layout_height="31dp" android:id="@+id/spinner3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/spinner2"
            android:layout_marginTop="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/addOrder"
            android:layout_width="130dp"
            android:layout_height="107dp" android:id="@+id/button8"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/donutLW"
            android:layout_marginEnd="39dp" android:layout_marginRight="39dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner3" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:onClick="addDonut"/>
    <Button
            android:text="@string/returnMain"
            android:layout_width="367dp"
            android:layout_height="56dp" android:id="@+id/button9"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="14dp" app:layout_constraintTop_toBottomOf="@+id/donutLW"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.218"
            app:layout_constraintHorizontal_bias="0.363"/>
    <TextView
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/priceTV"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/donutLW" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/button9" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>