<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storeOrderHeader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.037"
            android:id="@+id/reviewLabel" app:layout_constraintHorizontal_bias="0.495"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="411dp"
            android:layout_height="493dp" tools:layout_editor_absoluteY="58dp" tools:layout_editor_absoluteX="2dp"
            android:id="@+id/orderList" android:clipToPadding="false"/>
    <Button
            android:text="@string/returnMain"
            android:layout_width="369dp"
            android:layout_height="73dp" android:id="@+id/returnBTN" tools:layout_editor_absoluteY="642dp"
            tools:layout_editor_absoluteX="21dp"/>
    <Button
            android:text="@string/removeOrder"
            android:layout_width="369dp"
            android:layout_height="73dp" android:id="@+id/removeBTN" tools:layout_editor_absoluteY="569dp"
            tools:layout_editor_absoluteX="21dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>