<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderHeader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.037"
            android:id="@+id/reviewLabel" app:layout_constraintHorizontal_bias="0.495"/>
    <Button
            android:text="@string/returnMain"
            android:layout_width="369dp"
            android:layout_height="73dp" android:id="@+id/returnBTN"
            app:layout_constraintTop_toBottomOf="@+id/placeBTN" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:onClick="returnToMain"/>
    <Button
            android:text="@string/placeOrder"
            android:layout_width="369dp"
            android:layout_height="73dp" android:id="@+id/placeBTN"
            app:layout_constraintTop_toBottomOf="@+id/removeBTN" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/removeItem"
            android:layout_width="369dp"
            android:layout_height="73dp" android:id="@+id/removeBTN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/orderList"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/removeBTN" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
    />
    <ListView
            android:layout_width="363dp"
            android:layout_height="309dp"
            android:id="@+id/orderList"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="9dp" app:layout_constraintTop_toBottomOf="@+id/reviewLabel"/>

</androidx.constraintlayout.widget.ConstraintLayout>