<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storeOrderHeader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.007"
            android:id="@+id/reviewLabel"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="411dp"
            android:layout_height="493dp"
            android:id="@+id/orderList" android:clipToPadding="false" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/reviewLabel" android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toTopOf="@+id/removeBTN" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/returnMain"
            android:layout_width="369dp"
            android:layout_height="73dp" android:id="@+id/returnBTN"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp"/>
    <Button
            android:text="@string/removeOrder"
            android:layout_width="369dp"
            android:layout_height="73dp" android:id="@+id/removeBTN"
            app:layout_constraintBottom_toTopOf="@+id/returnBTN" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>