<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DonutActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/tempdonut" android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="55dp" android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginRight="55dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.028"/>
    <RadioGroup
            android:layout_width="134dp"
            android:layout_height="105dp"
            android:id="@+id/donutTypeRB" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner2" app:layout_constraintEnd_toStartOf="@+id/_dynamic"
            android:layout_marginEnd="6dp" android:layout_marginRight="6dp">
        <RadioButton
                android:text="@string/yeast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton5"/>
        <RadioButton
                android:text="@string/cake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton6"/>
        <RadioButton
                android:text="@string/donutHole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton7"/>
    </RadioGroup>
    <Spinner
            android:layout_width="137dp"
            android:layout_height="33dp" android:id="@+id/spinner2"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/donutTypeRB"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginBottom="37dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner3" app:layout_constraintEnd_toStartOf="@+id/_dynamic"
            android:layout_marginEnd="18dp" android:layout_marginRight="18dp"/>
    <Spinner
            android:layout_width="143dp"
            android:layout_height="27dp" android:id="@+id/spinner3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="25dp" android:layout_marginStart="25dp" android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner2" app:layout_constraintEnd_toStartOf="@+id/_dynamic"
            android:layout_marginEnd="12dp" android:layout_marginRight="12dp" android:layout_marginBottom="168dp"
            app:layout_constraintBottom_toTopOf="@+id/button3"/>
    <ListView
            android:layout_width="216dp"
            android:layout_height="376dp" android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp" app:layout_constraintStart_toEndOf="@+id/donutTypeRB"
            android:layout_marginBottom="52dp" app:layout_constraintBottom_toTopOf="@+id/button4"
            android:layout_marginEnd="15dp" android:layout_marginRight="15dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/donutLW"/>
    <Button
            android:text="@string/addOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/spinner3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="46dp" android:layout_marginStart="46dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"
            android:layout_marginEnd="243dp" android:layout_marginRight="243dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:onClick="addDonut"/>
    <Button
            android:text="@string/removeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button4"
            android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/_dynamic" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="240dp" android:layout_marginStart="240dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="44dp"
            android:layout_marginEnd="83dp" android:layout_marginRight="83dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>